cluster/study/anki-sync/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: anki-sync
    app.kubernetes.io/version: 137ec6f
  name: anki-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: anki-sync
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: anki-sync
        app.kubernetes.io/version: 137ec6f
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/anki-sync:137ec6f@sha256:6ef9c7accad7e70263dc52028450f0043d53abec03859656880e812356297fe4
        name: anki-sync
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /data
          name: data
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 15
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: anki-sync-data-pvc
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      shareProcessNamespace: true
