cluster/study/anki-sync/egress-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: anki-sync-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: anki-sync
  policyTypes:
  - Egress
  egress: []
